# pulumi-gcp-vertex-model-deployment

./: .gitignore  Makefile  README.md  go.mod  go.sum
.github/workflows/: auto-release.yaml  dependabot-auto-merge.yaml  develop.yaml
cmd/: main.go
pkg/resources/: endpointreads.go  inputs.go  model.go  modelreads.go  modelupdates.go  provider.go  provider_test.go  pulumi.go
pkg/services/: client.go  model.go  modeldelete.go  modeldeploy.go  modelendpointdeploy.go  modelendpointget.go  modelendpointundeploy.go  modelget.go  modelupload.go
pkg/version/: version.go
sdk/dotnet/: Davidmontoyago.GcpVertexModelDeployment.csproj  Provider.cs  Utilities.cs  pulumi-plugin.json
sdk/dotnet/Resources/: VertexModelDeployment.cs
sdk/dotnet/Resources/Inputs/: EndpointModelDeploymentArgsArgs.cs
sdk/dotnet/Resources/Outputs/: EndpointModelDeploymentArgs.cs
sdk/go/: go.mod  go.sum
sdk/go/pulumi-gcp-vertex-model-deployment/: doc.go  init.go  provider.go
sdk/go/pulumi-gcp-vertex-model-deployment/internal/: pulumiUtilities.go
sdk/java/: README.md  build.gradle  settings.gradle
sdk/nodejs/: index.ts  package.json  provider.ts  tsconfig.json  utilities.ts
sdk/nodejs/resources/: index.ts  vertexModelDeployment.ts
sdk/nodejs/types/: input.ts  output.ts
sdk/python/: pyproject.toml
sdk/python/davidmontoyago_gcp_vertex_model_deployment/: __init__.py  _utilities.py  provider.py
sdk/python/davidmontoyago_gcp_vertex_model_deployment/resources/: __init__.py  _inputs.py  outputs.py  vertex_model_deployment.py
(+10 files in other folders)
