[project]
  name = "davidmontoyago_gcp_vertex_model_deployment"
  description = "Deploy AI models to Vertex endpoints"
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "gcp", "vertex", "model"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Repository = "github.com/davidmontoyago/pulumi-gcp-vertex-model-deployment"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      davidmontoyago_gcp_vertex_model_deployment = ["py.typed", "pulumi-plugin.json"]
